{
    "name": "UserInputAction",
    "maps": [
        {
            "name": "Paddle",
            "id": "ff6cf1cd-a9ab-4d30-b101-f93cc723f54e",
            "actions": [
                {
                    "name": "DefaultControl",
                    "type": "Value",
                    "id": "0071a465-0196-4bca-bfcd-a8b63d47720c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TiltControl",
                    "type": "Value",
                    "id": "49f18b0a-475b-4982-a0cf-cf372216c774",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GameStart",
                    "type": "Button",
                    "id": "c7573fea-8dbc-451d-9405-3edd21871f9e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchControl",
                    "type": "Value",
                    "id": "c7b1ff06-b28d-4179-813d-2e11c0c1687f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf95e540-62f3-4a06-b1de-07a1c7b111e8",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MobileAccelerometer",
                    "action": "TiltControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b542999c-652e-47bf-bfff-7f66a4dcfa75",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DefaultControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "deaa430e-353d-49f1-9cc2-5cefbbb0ae15",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "DefaultControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "35823c74-30c7-4295-9c14-3766721832b0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "DefaultControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e7e5b714-221b-49aa-bf82-702590f374cc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "DefaultControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "feb6bfe0-53a1-448a-aa0c-b5cb9150fdf7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "DefaultControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1a7e5752-4a76-4103-bd2a-797fe13cdc08",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "GameStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "574e2d42-530d-4ec9-8351-ef28d81d2058",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MobileTouchControl",
                    "action": "GameStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57777cb6-1e8e-4bf7-8aba-133b4dadf15c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MobileTouchControl",
                    "action": "TouchControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "MobileTouchControl",
            "bindingGroup": "MobileTouchControl",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "MobileAccelerometer",
            "bindingGroup": "MobileAccelerometer",
            "devices": [
                {
                    "devicePath": "<Sensor>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}